Criei toda a estrutua do site

--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caminho da Maternidade</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img id="gestante" src="assets/gestante.png" alt="Gestante">
         <h1>Caminho da Maternidade</h1>
-        <img src="" alt="">
+        <img id="cegonha" src="assets/Cegonha.png" alt="Cegonha">
     </header>
+    <main>
+        <nav id="menulateral">
+            <a href="pages/periodoPremunitorio.html">Período Premunitório</a>
+            <a href="">Tempos - Mecanismo do Parto</a>
+            <a href="">Contrações Uterinas Durante a Gestação</a>
+            <a href="">Contrações Uterinas Durante o Parto</a>
+            <a href="">Modificações Fisiológicas na Mulher</a>
+            <a href="">Dúvidas Frequentes</a>
+        </nav>
+        <section>
+            <img id="gestante" src="assets/gestante.png" alt="">
+            <img id="cegonha" src="assets/Cegonha.png" alt="">
+            <img id="hospital" src="assets/hospital.png" alt="">
+            <nav id="caminho">
+                <img id="caminho1" src="assets/caminhos/1.png" alt="">
+                <img id="caminho2" src="assets/caminhos/2.png" alt="">
+                <img id="caminho3" src="assets/caminhos/3.png" alt="">
+                <img id="caminho4" src="assets/caminhos/4.png" alt="">
+                <img id="caminho5" src="assets/caminhos/5.png" alt="">
+                <img id="caminho6" src="assets/caminhos/6.png" alt="">
+            </nav>
+            <img id="bb1" src="assets/bb1.png" alt="">
+            <img id="bb2" src="assets/bb2.png" alt="">
+        </section>
+    </main>
 </body>
 </html>
