Adicionei a responsividade para celular

--- a/pages/modificacoes-fisiologicas-na-mulher.html
+++ b/pages/modificacoes-fisiologicas-na-mulher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contrações Uterinas Durante a Gestação</title>
+    <title>Modificações Fisiológicas na Mulher</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -15,16 +15,17 @@
     </header>
     <main>
         <nav id="menulateral">
-            <a href="">Período Premunitório</a>
-            <a href="">Tempos - Mecanismo do Parto</a>
-            <a href="">Contrações Uterinas Durante a Gestação</a>
-            <a href="">Contrações Uterinas Durante o Parto</a>
-            <a href="">Modificações Fisiológicas na Mulher</a>
-            <a href="">Dúvidas Frequentes</a>
+            <a href="../index.html">Home</a>
+            <a href="periodo-premunitorio.html">Período Premunitório</a>
+            <a href="tempos-mecanismo-do-parto.html">Tempos - Mecanismo do Parto</a>
+            <a href="contracoes-uterinas-durante-a-gestacaoo.html">Contrações Uterinas Durante a Gestação</a>
+            <a href="contracoes-uterinas-durante-o-parto.html">Contrações Uterinas Durante o Parto</a>
+            <a href="modificacoes-fisiologicas-na-mulher.html">Modificações Fisiológicas na Mulher</a>
+            <a href="duvidas-frequentes.html">Dúvidas Frequentes</a>
         </nav>
         <section>
             <article class="conteudo">
-                <h1>Contrações Uterinas Durante a Gestação</h1>
+                <h1>Modificações Fisiológicas na Mulher</h1>
                 <p>
                     orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
                 </p>
