--- a/index.html
+++ b/index.html
@@ -13,26 +13,39 @@
         <h1>Caminho da Maternidade</h1>
         <img id="cegonha" src="assets/Cegonha.png" alt="Cegonha">
     </header>
+    <nav id="menulateral">
+        <a href="pages/periodo-premunitorio.html">Período Premunitório</a>
+        <a href="pages/tempos-mecanismo-do-parto.html">Tempos - Mecanismo do Parto</a>
+        <a href="pages/contracoes-uterinas-durante-a-gestacaoo.html">Contrações Uterinas Durante a Gestação</a>
+        <a href="pages/contracoes-uterinas-durante-o-parto.html">Contrações Uterinas Durante o Parto</a>
+        <a href="pages/modificacoes-fisiologicas-na-mulher.html">Modificações Fisiológicas na Mulher</a>
+        <a href="pages/duvidas-frequentes.html">Dúvidas Frequentes</a>
+    </nav>
     <main>
-        <nav id="menulateral">
-            <a href="pages/periodoPremunitorio.html">Período Premunitório</a>
-            <a href="">Tempos - Mecanismo do Parto</a>
-            <a href="">Contrações Uterinas Durante a Gestação</a>
-            <a href="">Contrações Uterinas Durante o Parto</a>
-            <a href="">Modificações Fisiológicas na Mulher</a>
-            <a href="">Dúvidas Frequentes</a>
-        </nav>
+
         <section>
             <img id="gestante" src="assets/gestante.png" alt="">
             <img id="cegonha" src="assets/Cegonha.png" alt="">
             <img id="hospital" src="assets/hospital.png" alt="">
             <nav id="caminho">
-                <img id="caminho1" src="assets/caminhos/1.png" alt="">
-                <img id="caminho2" src="assets/caminhos/2.png" alt="">
-                <img id="caminho3" src="assets/caminhos/3.png" alt="">
-                <img id="caminho4" src="assets/caminhos/4.png" alt="">
-                <img id="caminho5" src="assets/caminhos/5.png" alt="">
-                <img id="caminho6" src="assets/caminhos/6.png" alt="">
+                <a href="pages/periodo-premunitorio.html">
+                    <img  id="caminho1" src="assets/caminhos/1.png" alt="">
+                </a>
+                <a href="pages/tempos-mecanismo-do-parto.html">
+                    <img  id="caminho2" src="assets/caminhos/2.png" alt="">
+                </a>
+                <a href="pages/contracoes-uterinas-durante-a-gestacaoo.html">
+                    <img  id="caminho3" src="assets/caminhos/3.png" alt="">
+                </a>
+                <a href="pages/contracoes-uterinas-durante-o-parto.html">
+                    <img  id="caminho4" src="assets/caminhos/4.png" alt="">
+                </a>
+                <a href="pages/modificacoes-fisiologicas-na-mulher.html">
+                    <img  id="caminho5" src="assets/caminhos/5.png" alt="">
+                </a>
+                <a href="pages/duvidas-frequentes.html">
+                    <img  id="caminho6" src="assets/caminhos/6.png" alt="">
+                </a>
             </nav>
             <img id="bb1" src="assets/bb1.png" alt="">
             <img id="bb2" src="assets/bb2.png" alt="">
