Corigi a responsividade do celular

--- a/index.html
+++ b/index.html
@@ -22,29 +22,28 @@
         <a href="pages/duvidas-frequentes.html">Dúvidas Frequentes</a>
     </nav>
     <main>
-
         <section>
             <img id="gestante" src="assets/gestante.png" alt="">
             <img id="cegonha" src="assets/Cegonha.png" alt="">
             <img id="hospital" src="assets/hospital.png" alt="">
             <nav id="caminho">
                 <a href="pages/periodo-premunitorio.html">
-                    <img  id="caminho1" src="assets/caminhos/1.png" alt="">
+                    <img  id="caminho1" src="assets/caminhos/1.png" alt="caminho">
                 </a>
                 <a href="pages/tempos-mecanismo-do-parto.html">
-                    <img  id="caminho2" src="assets/caminhos/2.png" alt="">
+                    <img  id="caminho2" src="assets/caminhos/2.png" alt="caminho">
                 </a>
                 <a href="pages/contracoes-uterinas-durante-a-gestacaoo.html">
-                    <img  id="caminho3" src="assets/caminhos/3.png" alt="">
+                    <img  id="caminho3" src="assets/caminhos/3.png" alt="caminho">
                 </a>
                 <a href="pages/contracoes-uterinas-durante-o-parto.html">
-                    <img  id="caminho4" src="assets/caminhos/4.png" alt="">
+                    <img  id="caminho4" src="assets/caminhos/4.png" alt="caminho">
                 </a>
                 <a href="pages/modificacoes-fisiologicas-na-mulher.html">
-                    <img  id="caminho5" src="assets/caminhos/5.png" alt="">
+                    <img  id="caminho5" src="assets/caminhos/5.png" alt="caminho">
                 </a>
                 <a href="pages/duvidas-frequentes.html">
-                    <img  id="caminho6" src="assets/caminhos/6.png" alt="">
+                    <img  id="caminho6" src="assets/caminhos/6.png" alt="caminho">
                 </a>
             </nav>
             <img id="bb1" src="assets/bb1.png" alt="">
