--- a/pages/modificacoes-fisiologicas-na-mulher.html
+++ b/pages/modificacoes-fisiologicas-na-mulher.html
@@ -15,7 +15,12 @@
     </header>
     <main>
         <nav id="menulateral">
-            <a href="../index.html">Home</a>
+            <a id="voltar" href="../index.html">
+                <label for="">
+                    <img src="../assets/seta-voltar.png" alt="">
+                    <h1>Voltar</h1>
+                </label>
+            </a>
             <a href="periodo-premunitorio.html">Período Premunitório</a>
             <a href="tempos-mecanismo-do-parto.html">Tempos - Mecanismo do Parto</a>
             <a href="contracoes-uterinas-durante-a-gestacaoo.html">Contrações Uterinas Durante a Gestação</a>
