Add o botao de menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <img id="gestante" src="assets/gestante.png" alt="Gestante">
         <h1>Caminho da Maternidade</h1>
         <img id="cegonha" src="assets/Cegonha.png" alt="Cegonha">
+        <a href="pages/menu-mobile.html">
+            <img id="btnmenu" src="assets/menu.png" alt="Menu">
+        </a>
     </header>
    
     <main>
