--- a/pages/menu-mobile.html
+++ b/pages/menu-mobile.html
@@ -26,6 +26,7 @@
         <a href="contracoes-uterinas-durante-o-parto.html">Contrações Uterinas Durante o Parto</a>
         <a href="modificacoes-fisiologicas-na-mulher.html">Modificações Fisiológicas na Mulher</a>
         <a href="duvidas-frequentes.html">Dúvidas Frequentes</a>
+        <a href="sobre-nos.html">Sobre nós</a>
     </nav>
 </body>
 </html>
