--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contrações Uterinas Durante o Parto</title>
+    <title>Sobre nós</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -35,10 +35,31 @@
         </nav>
         <section>
             <article class="conteudo">
-                <h1>Contrações Uterinas Durante o Parto</h1>
-                <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
-                </p>
+                <h1 id="sobrenos">Sobre nós</h1>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p1.jpeg" alt="Foto Myllene">
+                    <h1>Myllene Meneses de Melo</h1>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p2.jpeg" alt="Foto Aliatrícia">
+                    <h1>Aliatrícia Silva Pedrosa</h1>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p3.jpeg" alt="Foto Maria Vitória">
+                    <h1>Maria Vitória do Nascimento Santos</h1>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p4.jpeg" alt="Foto Maria Paula">
+                    <h1>Maria Paula Brito de Souza</h1>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p5.jpeg" alt="Foto Maria Laysa">
+                    <h1>Maria Laysa Oliveira dos Santos</h1>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p6.jpeg" alt="Foto Ruane">
+                    <h1>Antonia Ruane Lima da Silva Coelho</h1>
+                </div>
             </article>
         </section>
 
