--- a/pages/contracoes-uterinas-durante-a-gestacaoo.html
+++ b/pages/contracoes-uterinas-durante-a-gestacaoo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contrações Uterinas Durante a Gestação</title>
+    <title>Contrações Uterinas Durante a Toda a Gestação</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -35,9 +35,75 @@
         </nav>
         <section>
             <article class="conteudo">
-                <h1>Contrações Uterinas Durante a Gestação</h1>
+                <h1>Contrações Uterinas Durante Toda a Gestação</h1>
                 <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
+                    A presença da contração uterina é uma constante em todo o ciclo gravídico-puerperal pois conforme a contração uterina progride ao longo de sua gravidez, você poderá começar a sentir contrações estranhas em seu abdômen, como uma faixa apertada em toda a sua barriga. Além disso, a contração influencia no período expulsivo da placenta e no período puerperal. 
+                </p>   
+                <p>
+                    As contrações de Braxton Hicks não são realmente dores do parto, mas sim as famosas um dos sintomas mais comuns da gravidez.
+                </p>
+                <p>
+                    • Elas podem ocorrer em toda a sua gravidez, mas geralmente aumentam no último trimestre. Elas tendem a ocorrer de maneira irregular e, embora desconfortável, elas não devem incomodá-la muito.
+                </p>
+                <p>
+                    • Muitas vezes chamadas de “contrações de prática”, as contrações de Braxton Hicks ajudam seu útero no futuro trabalho de parto. Elas ajudam a amolecer o seu colo uterino e exercitar todos os músculos que você usará para empurrar o bebê para fora. Sem a ajuda das contrações de Braxton Hicks, o trabalho de parto seria uma experiência muito mais difícil e dolorosa.
+                </p>
+                <p>
+                    As contrações de Braxton Hicks começam muitas vezes como um resultado específico de alguma ação. Por exemplo:
+                </p>
+                <p>
+                    • Atividade física ou esforço
+                </p>
+                <p>
+                    • Relação sexual
+                </p>
+                <p>
+                    • Desidratação
+                </p>
+                <p>
+                    • O seu bebê que se desloca dentro de seu útero
+                </p>
+                <br>
+                <h2>
+                    FUNÇÕES DA CONTRATILIDADE UTERINA
+                </h2>
+                <p>
+                    - Manutenção da gravidez (bloqueio progesterônico)
+                </p>
+                <p>
+                    Nessa função; Mantém a gravidez; Atividade reduzida, irregular e localizada; A Progesterona também bloqueia ocitocina, diminuindo a expressão dos receptores do hormônio (diminuindo contrações), Utiliza-se progesterona para evitar parto prematuro.
+                </p>
+                <p>
+                    - Dilatação cervical
+                </p>
+                <p>
+                    Nessa função; O apagamento e a dilatação cervical se produzem por efeito das contrações e modificações bioquímicas do colo ao final da gravidez. O apagamento é a redução da longitude do canal cervical.
+                </p>
+                <p>
+                    - Descida e expulsão do feto
+                </p>
+                <p>
+                    A descida inicia desde o início do trabalho de parto e termina no momento da expulsão fetal. Na tentativa de completar a insinuação, a cabeça migra até as proximidades do assoalho pélvico, mantendo o mesmo sentido e levemente em flexão. No período expulsivo importante contribuição é dada pelos puxos maternos. 
+                </p>
+                <p>
+                    - Descolamento da placenta
+                </p>
+                <p>
+                    Com a expulsão do feto, há grande retração do corpo uterino, promovendo a desinserção placentária do seu sítio e a sua expulsão, No canal do parto, a placenta não sofre mais a ação da contratilidade do corpo e só pode ser expulsa para o exterior pela expressão manual. 
+                </p>
+                <p>
+                    - Hemóstase puerperal
+                </p>
+                <p>
+                    Depende do tono uterino, das contrações e da retração das fibras musculares, As contrações peristálticas do útero são eficazes para eliminar os coágulos e os lóquios do interior da matriz. 
+                </p>
+                <br>
+                <h3>
+                    Referências
+                </h3>
+                <p>
+                    MOREIRA, Fernando. Contrações de Treinamento (ou Braxton Hicks). Fetalmednet, 2014. Disponível em: <a rel="external" target="_blank" href="https://www.fetalmed.net/contracoes-de-braxton-hicks/"> https://www.fetalmed.net/contracoes-de-braxton-hicks/</a> . Acesso em: 29 de Outubro de 2022. 
+                    REZENDE, J. Obstetrícia. 11ª ed. Rio de Janeiro: Guanabara Koogan, 2008.
                 </p>
             </article>
         </section>
