--- a/pages/duvidas-frequentes.html
+++ b/pages/duvidas-frequentes.html
@@ -36,8 +36,94 @@
         <section>
             <article class="conteudo">
                 <h1>Dúvidas Frequentes</h1>
+                <br>
+                <h3>1. Quando devo ir para a maternidade?</h3>
                 <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
+                    Ao iniciar a fase ativa do parto, caracterizado por: contrações dolorosas e rítmicas( no mínimo 2
+                    em 10 min), com duração de 50 a 60 segundos; Colo apagado com 2 cm de dilatação ( primíparas)
+                    e colo semi-apagado nas multíparas, com 3 cm; Formação da bolsa das águas; Perda do tampão
+                    mucoso. No entanto, ainda não precisa ir correndo para a maternidade, há tempo suficiente
+                    para se arrumar com tranquilidade e conferir se está levando tudo que precisa.
+                </p>
+                <br>
+                <h3>2. É necessário fazer o corte dos pelos pubianos para realizar o parto ?</h3>
+                <p>
+                    Não, esse não é um procedimento de rotina. Os pelos pubianos garantem maior proteção e sua
+                    retirada pode ser um fator de risco para o desenvolvendo de infecções.
+                </p>
+                <br>
+                <h3>3. Como saber se o trabalho de parto iniciou?</h3>
+                <p>
+                    Contrações uterinas intensas, regulares e dolorosas, que modificam a cérvice; Ao sentir a perda
+                    de água pela vagina( ruptura da bolsa de águas), que pode ocorrer no começo ou no final do
+                    trabalho de parto, sendo sinal de alerta se ocorrer antes do início do trabalho de parto;
+                    eliminação do tampão mucoso.
+                </p>
+                <br>
+                <h3>4. Posso me alimentar antes de realizar um parto vaginal?</h3>
+                <p>
+                    Pode, se a gestante desejar. No entanto, deve ser uma alimentação leve e pequenas
+                    quantidades de líquidos claros e no período do pré-parto.
+                </p>
+                <br>
+                <h3>5. Tenho direito a presença de um acompanhante durante o parto?</h3>
+                <p>
+                    A presença de acompanhante durante o trabalho de parto é direito da mulher. Sendo uma
+                    recomendação da OMS e do Ministério da Saúde e direito garantido pela Lei Federal n°11.108,
+                    de 7 de Abril de 2005, as mulheres atendidas no SUS.
+                </p>
+                <br>
+                <h3>6. Qual a melhor posição para ter um bebê em parto vaginal?</h3>
+                <p>
+                    A posição que a gestante mais se sentir confortável, sendo indicadas as posições de Laborie-
+                    Duncan( em decúbito dorsal, com os joelhos flexionados próximos ao abdômen, e com as mãos
+                    segurando a parte posterior da perna) ou cócoras.
+                </p>
+                <br>
+                <h3>7. Quando a cesariana é indicada?</h3>
+                <p>
+                    Indicações relativas absurdas: Placenta prévia total ou parcial, malformações genitais,
+                    tumorações genitais, desproporção cefalopélvica com feto vivo. Além de indicações relativas
+                    maternas: cardiopatias específicas, pneumopatias específicas, dissecção aórtica, história de
+                    fístula retovaginal; Indicações relativas fetais: Sofrimento fetal, prolapso de cordão,
+                    apresentação pélvica ou córmica, gemelidade com 1 feto não cefálico, gemelidade
+                    monoamniótica, macrossomia, malformações fetais específicas, herpes genital ativo, HIV com
+                    carga viral > 1000 cópias.
+                </p>
+                <br>
+                <h3>8. Posso me alimentar antes de realizar a cesariana?</h3>
+                <p>
+                    Não, é recomendável que seja feita um jejum de 6 a 8 horas antes da cirurgia, devido a anestesia
+                    utilizada que poderá provocar refluxo e engasgamento.
+                </p>
+                <br>
+                <h3>9. Devo usar sonda vesical de demora durante a cesariana?</h3>
+                <p>
+                    Sim, esse instrumento é utilizado para a coleta do xixi, devido a anestesia, realizada por meio de
+                    um procedimento seguro e estéril, e sendo de extrema importância.
+                </p>
+                <br>
+                <h3>
+                    10. Depois de um parto cesáreo, os próximos obrigatoriamente devem ser cesáreos
+                    também?
+                </h3>
+                <p>
+                    Não é obrigatório que o próximo parto seja cesáreo, a via de parto dependerá das condições
+                    maternos e fetais de cada gestação.
+                </p>
+                <br>
+                <h3>
+                    11. A episiotomia( corte no períneo) é obrigatório em todo parto vaginal? 
+                </h3>
+                <p>
+                    A episiotomia não é um procedimento de rotina, devendo ser realizado apenas em situações específicas, como quando há risco de lacerações na mãe ou sofrimento fetal.
+                </p>
+                <br>
+                <h3>REFERÊNCIA:</h3>
+                <p>
+                    MONTENEGRO, Carlos Antonio Barbosa; REZENDE FILHO, Jorge de.
+                    Rezende, obstetricia fundamental. 12ed. Rio de Janeiro: Guanabara
+                    Koogan, 2012. 724p
                 </p>
             </article>
         </section>
