--- a/pages/modificacoes-fisiologicas-na-mulher.html
+++ b/pages/modificacoes-fisiologicas-na-mulher.html
@@ -37,7 +37,71 @@
             <article class="conteudo">
                 <h1>Modificações Fisiológicas na Mulher</h1>
                 <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
+                    A gestação é uma fase que transforma de maneira intensa o corpo das mulheres. Afinal, ocorre uma volumosa produção de hormônios e demais adaptações necessárias ao organismo para gerar uma nova vida. 
+                </p>
+                <p>
+                    <b>
+                        Náuseas, enjoos e azias:
+                    </b>
+                    No primeiro trimestre da gestação, náuseas e enjoos são bastante comuns por causa dos altos níveis de estrogênio, progesterona e hCG no organismo. Em média, 80% das gestantes apresentam tais sintomas até a 12ª semana de gestação.
+                </p>
+                <p>
+                    <b>Formigamento nas pernas e varizes:</b>
+                    O aumento do fluxo sanguíneo e do peso para a pernas pode causar inchaços e varizes. 
+                </p>
+                <p>
+                    <b>Mudanças na pele:</b>
+                     Hormônios da gestação também são responsáveis por alterações na pele. Manchas marrons, conhecidas como melasmas, podem aparecer, especialmente na face.
+                </p>
+                <p>
+                    <b>Mudanças no corpo após a gravidez:</b>
+                </p>
+                <p>
+                    Geralmente, são necessários entre 9 e 12 meses para recuperar o corpo de antes da gravidez. Certamente, cada corpo é de um jeito e vai levar o seu próprio tempo. Por isso, não se assuste tanto se você se recuperar rapidamente quanto se demorar mais do que a média.
+                </p>
+                <p>
+                    <b>
+                        1. Redução de peso:
+                    </b>
+                     Vamos começar com uma notícia boa: após o parto nós eliminamos a retenção de líquido e nosso útero começa a se contrair, diminuindo o seu peso pela metade. Isso nos faz perder vários quilos logo de cara, e mesmo que não nos leve ao nosso peso ideal, já é um bom começo.
+                </p>
+                <p>
+                    <b>
+                        2. Barriga inchada:
+                    </b>
+                     O útero está um pouco dilatado, por isso demora um pouco mais de um mês para voltar ao seu estado anterior.
+                </p>
+                <p>
+                    <b>
+                        3. Dores vaginais:
+                    </b>
+                     Elas se intensificam nas mulheres que passaram por um processo de parto natural, mas também ocorrem desconfortos após a cesárea. Seus sintomas são ressecamento, inflamação, presença de uma secreção conhecida como lóquio e incapacidade de ter contato sexual.
+                </p>
+                <p>
+                    <b>
+                        4. Inchaço nas pernas:
+                    </b>
+                     Esse incômodo pode durar várias semanas, mas desaparece com massagens suaves e ao fazer exercícios ou caminhadas.
+                </p>             
+                <p>
+                    <b>
+                        5. Inflamação das mamas e sensibilidade:
+                    </b>
+                     Isto ocorre devido à produção de leite, podendo fazer com as mamas fiquem um pouco flácidas e que apareçam estrias.
+                </p>
+                <p>
+                    Você deve aplicar cremes constantemente e usar um sutiã adequado que não cause atrito, porque também é possível ter dor ou desconforto nos mamilos.
+                    Além de alguns sistema sofre modificações, como Sistema. Digestório, Sistema. Cardíaco, Sistema. Renal, Sistema. Tegumentar, dentre outros. 
+                </p>   
+                <br>           
+                <h3> Referências </h3>                
+                <p>
+                    • 5 Mudanças no Corpo durante a Gravidez. clinicafgo, 2021.Disponível em: 
+                    <a rel="external" target="_blank" href="https://clinicafgo.com.br/noticias/mudancas-no-corpo-durante-a-gravidez/">https://clinicafgo.com.br/noticias/mudancas-no-corpo-durante-a-gravidez/</a>
+                    . Acesso em: 29, out de 2022. 
+                </p>
+                <p>
+                    • Mudanças no corpo após a gravidez. Soumamae, 2021. Disponível em: <a rel="external" target="_blank" href="https://soumamae.com.br/mudancas-no-corpo-apos-a-gravidez/">https://soumamae.com.br/mudancas-no-corpo-apos-a-gravidez/</a> . Acesso em: 29, out de 2022. 
                 </p>
             </article>
         </section>
