--- a/pages/periodo-premunitorio.html
+++ b/pages/periodo-premunitorio.html
@@ -36,8 +36,27 @@
             <article class="conteudo">
                 <h1>Período Premunitório</h1>
                 <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
+                    • É por meio das contrações uterinas com ritmo e regulares que alteram o colo uterino;
                 </p>
+
+                <p>• Nesse momento, haverá contrações uterinas irregulares e incoordenadas;</p>
+                <p>• Acontece uma descida do fundo uterino (2 a 4 cm);</p>
+                <p>• Acomodação da apresentação do bebê no canal de parto;</p>
+                <p>• Colo do útero começou a amolecer/amadurecer e, por isso, é normal que aconteça por volta das 37 semanas, quando o trabalho de parto está próximo;</p>
+                <p>• Este período acontece a fase latente do parto onde pode durar cerca de 12-20 horas;</p>
+                <p>• Nesta fase as contrações tornam-se progressivamente mais intensas, porém sem dilatação do colo;</p>
+                <p>• Pode acontecer a saída do tampão mucoso endocervical, juntamente com o apagamento do colo uterino. OBS: É importante saber que a perda do tampão pode ocorrer semanas ou dias antes do início do trabalho de parto, e esse intervalo varia bastante de acordo com cada gestação.</p>
+                <p>• O tampão mucoso é uma substância produzida pelo corpo nos primeiros meses de gravidez, que tem como objetivo evitar que bactérias e outros microrganismos cheguem até o útero e interfiram no desenvolvimento do bebê e a continuidade da gestação;</p>
+                <p>• O tampão fica localizado logo após o canal vaginal, fechando o colo do útero e permanecendo até que o bebê esteja pronto para nascer;</p>
+                <p>• O tampão quase sempre tem consistência gelatinosa, mas sua cor pode variar desde transparente até marrom avermelhado;</p>
+                <p>• Após a saída do tampão, é comum que cólicas leves comecem e que a barriga apresente momentos de endurecimento ao longo do dia, no entanto isso não significa que já se esteja em trabalho de parto, pois essa fase é marcada por outros sintomas, como contrações ritmadas e o rompimento da bolsa das águas;</p>
+                <p>• Acontece o aumento das secreções cervicais com muco e as vezes com estrias de sangue;</p>
+                <p>• Quando o tampão sai numa fase inicial da gravidez, geralmente não é sinal de um problema, podendo indicar apenas que o corpo ainda está se adaptando às mudanças provocadas pela gravidez. Embora o bebê fique mais suscetível a infecções nesse período, o corpo volta a produzir um novo tampão rapidamente para voltar a proteger o útero;</p>
+                <p>• Por isso, o tampão saindo antes do tempo não deve ser motivo para preocupações. No entanto, sempre é importante informar o obstetra que está acompanhando a gravidez, para que possa ser avaliado se existe algum risco para a gestação.</p>
+
+            <h3>REFERENCIA </h3>
+
+            <p>REIS, Manuel. Tampão mucoso: o que é e como saber se já saiu. Tua Saúde, 2022. Disponível em: <a rel="external" target="_blank" href="https://www.tuasaude.com/como-identificar-o-tampao-mucoso/">https://www.tuasaude.com/como-identificar-o-tampao-mucoso/</a> Acesso em: 22 out. 2022.</p>
             </article>
         </section>
 
