--- a/pages/tempos-mecanismo-do-parto.html
+++ b/pages/tempos-mecanismo-do-parto.html
@@ -37,7 +37,69 @@
             <article class="conteudo">
                 <h1>Tempos - Mecanismo do Parto</h1>
                 <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
+                    É a “dancinha do bebê”, são os movimentos executados pelo feto em sua passagem pelo canal de parto.
+                </p>
+                <p>
+                    Tempos :
+                </p>
+                <p>
+                    • Insinuação ou Encaixamento
+                </p>
+                <p>
+                    • Descida
+                </p>
+                <p>
+                    • Rotação interna da cabeça
+                </p>
+                <p>
+                    • Desprendimento da cabeça
+                </p>
+                <p>
+                    • Rotação externa da cabeça e rotação interna das espáduas
+                </p>
+                <p>
+                    • Desprendimento das espáduas
+                </p>
+                <br>
+                <h2>
+                    Agora iremos falar sobre cada um deles!!
+                </h2>
+                <p>
+                    Insinuação ou Encaixamento:
+                </p>
+                <p>
+                    • É o encaixe do bebê, acontece na fase final da gestação, geralmente, após 35 semanas, quando o bebê se insinua na bacia óssea da mãe. Ele pode encaixar a cabeça, se estiver de cabeça para baixo (em apresentação cefálica), ou as nádegas, se estiver em posição pélvica.
+                </p>
+                <p>
+                    Descida:
+                </p>
+                <p>
+                    • Se processa desde o início do trabalho de parto e só termina com a expulsão total do feto. Movimento turbinal da cabeça. Aumento da flexão.
+                </p>                    
+                <p>
+                    Rotação interna da cabeça/ Desprendimento da cabeça:
+                </p>                     
+                <p>
+                    • A extremidade cefálica ( cabeça),  distende e dilata o diafragma pélvico (conjunto músculo aponeurótico). A nuca fetal apoia-se na sínfise púbica para realizar o movimento de arco.
+                </p>
+                <p>
+                    Rotação externa da cabeça/ Rotação interna das espáduas:
+                </p>                  
+                <p>
+                    • A primeira acontece fora da genitália, o occipital volta para o lado que se encontrava na insinuação. E a segunda ocorre simultaneamente.
+                </p>
+                <p>
+                    Desprendimento das Espáduas:
+                </p>
+                <p>
+                    • É o desprendimento dos ombrinhos, o restante do feto não oferece resistência.
+                </p>  
+                <br>                
+                <h3>
+                    Referências:
+                </h3>
+                <p>
+                    MONTENEGRO, Rezende Filho et al. Rezende, Obstetrcícia. Guanabara Koogan. 2013 
                 </p>
             </article>
         </section>
